Bug 257826 - Kontact setup/options window does not allow anything to be changed
Summary: Kontact setup/options window does not allow anything to be changed
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
: 258057 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-11-24 22:00 UTC by Tim Dickerson
Modified: 2010-11-27 22:48 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tim Dickerson 2010-11-24 22:00:35 UTC
Application: kontact (4.6 pre)
KDE Platform Version: 4.5.80 (4.6 Beta1)
Qt Version: 4.7.1
Operating System: Linux 2.6.36.1-server-1mnb x86_64
Distribution: "Mandriva Linux 2011.0"

-- Information about the crash:
What I was doing:

I Was trying to modify Kontact's overall setup options as accessed from the tool bar at the top of the application window...via 'Settings' and then 'Configure Kontact'. None of the buttons on the left hand side of the window (to select each option menu) cannot be selected and thus acts as a 'static' page without being able to adjust options. You can check and un-check the 'radio' buttons and that is it....no options within that category can be opened.  This continues to happen despite re-installation of all associated packages and user account information

The only way to change the options at this time, is by launching the individual program you want to change options for (e.g. Kmail) and adjust settings from there. 


- Custom settings of the application:

I have no custom applications and/or settings at this time.

The crash can be reproduced every time.

-- Backtrace:
Application: Kontact (kontact), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f9e99a79720 (LWP 7808))]

Thread 2 (Thread 0x7f9e818ea710 (LWP 7809)):
#0  0x00007f9e91f8723c in pthread_cond_wait@@GLIBC_2.3.2 () from /lib64/libpthread.so.0
#1  0x00007f9e96492964 in WTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib64/libQtWebKit.so.4
#2  0x00007f9e91f82d25 in start_thread () from /lib64/libpthread.so.0
#3  0x00007f9e9700eefd in clone () from /lib64/libc.so.6
#4  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f9e99a79720 (LWP 7808)):
[KCrash Handler]
#6  QModelIndex (this=0x203be80, child=<value optimized out>) at ../../src/corelib/kernel/qabstractitemmodel.h:65
#7  QSortFilterProxyModel::parent (this=0x203be80, child=<value optimized out>) at itemviews/qsortfilterproxymodel.cpp:1656
#8  0x00007f9e976fc853 in parent (this=<value optimized out>) at kernel/qabstractitemmodel.h:389
#9  QPersistentModelIndex::parent (this=<value optimized out>) at kernel/qabstractitemmodel.cpp:347
#10 0x00007f9e9862ead0 in isValid (this=<value optimized out>, index=...) at itemviews/qitemselectionmodel.h:107
#11 QItemSelectionModel::isSelected (this=<value optimized out>, index=...) at itemviews/qitemselectionmodel.cpp:1187
#12 0x00007f9e985fab52 in QListView::paintEvent (this=<value optimized out>, e=<value optimized out>) at itemviews/qlistview.cpp:984
#13 0x00007f9e9811ea4a in QWidget::event (this=0x2090500, event=0x7fff73fa5c60) at kernel/qwidget.cpp:8346
#14 0x00007f9e984c9666 in QFrame::event (this=0x2090500, e=0x7fff73fa5c60) at widgets/qframe.cpp:557
#15 0x00007f9e985da103 in QAbstractItemView::viewportEvent (this=0x2090500, event=0x7fff73fa5c60) at itemviews/qabstractitemview.cpp:1619
#16 0x00007f9e9770a8d7 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<value optimized out>, receiver=0x207f310, event=0x7fff73fa5c60) at kernel/qcoreapplication.cpp:847
#17 0x00007f9e980cd381 in QApplicationPrivate::notify_helper (this=0x1ecd9a0, receiver=0x207f310, e=0x7fff73fa5c60) at kernel/qapplication.cpp:4441
#18 0x00007f9e980d1eca in QApplication::notify (this=<value optimized out>, receiver=0x207f310, e=0x7fff73fa5c60) at kernel/qapplication.cpp:4324
#19 0x00007f9e98dd6926 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#20 0x00007f9e9770a74c in QCoreApplication::notifyInternal (this=0x7fff73fa8650, receiver=0x207f310, event=0x7fff73fa5c60) at kernel/qcoreapplication.cpp:732
#21 0x00007f9e9811b918 in sendSpontaneousEvent (this=0x2027e60, pdev=0x2042bf8, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x2042b90)
    at ../../src/corelib/kernel/qcoreapplication.h:218
#22 QWidgetPrivate::drawWidget (this=0x2027e60, pdev=0x2042bf8, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x2042b90) at kernel/qwidget.cpp:5433
#23 0x00007f9e9811c4df in QWidgetPrivate::paintSiblingsRecursive (this=0x20c6ad0, pdev=0x2042bf8, siblings=<value optimized out>, index=<value optimized out>, rgn=..., offset=..., flags=4, 
    sharedPainter=0x0, backingStore=0x2042b90) at kernel/qwidget.cpp:5640
#24 0x00007f9e9811b65a in QWidgetPrivate::drawWidget (this=0x20c6ad0, pdev=0x2042bf8, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5486
#25 0x00007f9e9811c4df in QWidgetPrivate::paintSiblingsRecursive (this=0x20133f0, pdev=0x2042bf8, siblings=<value optimized out>, index=<value optimized out>, rgn=..., offset=..., flags=4, 
    sharedPainter=0x0, backingStore=0x2042b90) at kernel/qwidget.cpp:5640
#26 0x00007f9e9811b65a in QWidgetPrivate::drawWidget (this=0x20133f0, pdev=0x2042bf8, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5486
#27 0x00007f9e9811c4df in QWidgetPrivate::paintSiblingsRecursive (this=0x2033cf0, pdev=0x2042bf8, siblings=<value optimized out>, index=<value optimized out>, rgn=..., offset=..., flags=4, 
    sharedPainter=0x0, backingStore=0x2042b90) at kernel/qwidget.cpp:5640
#28 0x00007f9e9811c39c in QWidgetPrivate::paintSiblingsRecursive (this=0x2033cf0, pdev=0x2042bf8, siblings=..., index=2, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5627
#29 0x00007f9e9811b65a in QWidgetPrivate::drawWidget (this=0x2033cf0, pdev=0x2042bf8, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5486
#30 0x00007f9e9811c4df in QWidgetPrivate::paintSiblingsRecursive (this=0x203de60, pdev=0x2042bf8, siblings=<value optimized out>, index=<value optimized out>, rgn=..., offset=..., flags=4, 
    sharedPainter=0x0, backingStore=0x2042b90) at kernel/qwidget.cpp:5640
#31 0x00007f9e9811b65a in QWidgetPrivate::drawWidget (this=0x203de60, pdev=0x2042bf8, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5486
#32 0x00007f9e9811c4df in QWidgetPrivate::paintSiblingsRecursive (this=0x2018400, pdev=0x2042bf8, siblings=<value optimized out>, index=<value optimized out>, rgn=..., offset=..., flags=4, 
    sharedPainter=0x0, backingStore=0x2042b90) at kernel/qwidget.cpp:5640
#33 0x00007f9e9811c39c in QWidgetPrivate::paintSiblingsRecursive (this=0x2018400, pdev=0x2042bf8, siblings=..., index=6, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5627
#34 0x00007f9e9811b65a in QWidgetPrivate::drawWidget (this=0x2018400, pdev=0x2042bf8, rgn=..., offset=..., flags=<value optimized out>, sharedPainter=0x0, backingStore=0x2042b90)
    at kernel/qwidget.cpp:5486
#35 0x00007f9e982df039 in QWidgetBackingStore::sync (this=0x2042b90) at painting/qbackingstore.cpp:1333
#36 0x00007f9e98111c60 in QWidgetPrivate::syncBackingStore (this=0x2018400) at kernel/qwidget.cpp:1816
#37 0x00007f9e9811ef52 in QWidget::event (this=0x1ec05d0, event=0x23bafe0) at kernel/qwidget.cpp:8493
#38 0x00007f9e984e330b in QMainWindow::event (this=0x1ec05d0, event=0x23bafe0) at widgets/qmainwindow.cpp:1478
#39 0x00007f9e98ec72f0 in KXmlGuiWindow::event(QEvent*) () from /usr/lib64/libkdeui.so.5
#40 0x00007f9e980cd3b4 in QApplicationPrivate::notify_helper (this=0x1ecd9a0, receiver=0x1ec05d0, e=0x23bafe0) at kernel/qapplication.cpp:4445
#41 0x00007f9e980d1eca in QApplication::notify (this=<value optimized out>, receiver=0x1ec05d0, e=0x23bafe0) at kernel/qapplication.cpp:4324
#42 0x00007f9e98dd6926 in KApplication::notify(QObject*, QEvent*) () from /usr/lib64/libkdeui.so.5
#43 0x00007f9e9770a74c in QCoreApplication::notifyInternal (this=0x7fff73fa8650, receiver=0x1ec05d0, event=0x23bafe0) at kernel/qcoreapplication.cpp:732
#44 0x00007f9e9770df35 in sendEvent (receiver=0x0, event_type=0, data=0x1e99350) at kernel/qcoreapplication.h:215
#45 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x1e99350) at kernel/qcoreapplication.cpp:1373
#46 0x00007f9e977356e3 in sendPostedEvents (s=0x1ec56c0) at kernel/qcoreapplication.h:220
#47 postEventSourceDispatch (s=0x1ec56c0) at kernel/qeventdispatcher_glib.cpp:277
#48 0x00007f9e91a52f83 in g_main_dispatch (context=0x1ec4950) at gmain.c:2149
#49 g_main_context_dispatch (context=0x1ec4950) at gmain.c:2702
#50 0x00007f9e91a53760 in g_main_context_iterate (context=0x1ec4950, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2780
#51 0x00007f9e91a539fd in g_main_context_iteration (context=0x1ec4950, may_block=1) at gmain.c:2843
#52 0x00007f9e9773587f in QEventDispatcherGlib::processEvents (this=0x1e98e60, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:415
#53 0x00007f9e9817273e in QGuiEventDispatcherGlib::processEvents (this=<value optimized out>, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:204
#54 0x00007f9e97709ae2 in QEventLoop::processEvents (this=<value optimized out>, flags=...) at kernel/qeventloop.cpp:149
#55 0x00007f9e97709d2c in QEventLoop::exec (this=0x7fff73fa85c0, flags=...) at kernel/qeventloop.cpp:201
#56 0x00007f9e9770e1eb in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#57 0x0000000000403d72 in _start ()

Possible duplicates by query: bug 257341, bug 257336, bug 257334, bug 255994, bug 255893.

Reported using DrKonqi
Comment 1 Tim Dickerson 2010-11-24 22:08:18 UTC
P.S. The application appears to continue running somewhere in the 'background' upon re-launching it. 

Specifically, it says: "Kontact appears to be running on a different display on this machine"

This is despite the fact that the process manager shows no such application be loaded in memory.
Comment 2 Christoph Feck 2010-11-27 17:12:20 UTC
*** Bug 258057 has been marked as a duplicate of this bug. ***
Comment 3 Christoph Feck 2010-11-27 17:15:26 UTC
Please do not report two issues with a single bug report. The crash is not related to the Settings dialog not working.

The bug seems to be caused by a regression in kdelibs, because I am seeing the same with Kontact 4.4.7 on KDE trunk.
Comment 4 Christoph Feck 2010-11-27 22:48:07 UTC
SVN commit 1201485 by cfeck:

Allow changing to pages that have no module proxy

KSettings::Dialog adds items without module proxy, so we
cannot change from or to those. The check can be removed
completely, because "resolveChanges" already makes sure
it does only ask for changes on pages having a proxy.

CCMAIL: dantti85-kde@yahoo.com.br
BUG: 257826


 M  +0 -5      kcmultidialog.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1201485