Allow changing to pages that have no module proxy

KSettings::Dialog adds items without module proxy, so we
cannot change from or to those. The check can be removed
completely, because "resolveChanges" already makes sure
it does only ask for changes on pages having a proxy.

CCMAIL: dantti85-kde@yahoo.com.br
BUG: 257826

svn path=/trunk/KDE/kdelibs/; revision=1201485